# KangarooTrucking

./: .dockerignore  .gitignore  Makefile  README.md
DEVOPS/dev/: .example.env  docker-compose.yml
DEVOPS/prod/: .example.env  docker-compose.yml
app/: Cargo.toml  Dockerfile
app/public/: index.html
app/public/assets/: index-Bw3KgUox.css  index-Dr2GnR7N.js
app/src/: main.rs
frontend/: index.html  package-lock.json  vite.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.jsx  index.css  main.jsx  theme.js
frontend/src/components/: Layout.jsx  Seo.jsx
frontend/src/pages/: About.jsx  Contact.jsx  Home.jsx
